--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -10,6 +10,7 @@ WORKDIR /mcp
 # Copy your code
 COPY server.py .
 COPY requirements.txt .
+COPY sonic.json .
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
